# dl_course_2023

./: .gitignore  Makefile  pyproject.toml
10-convNN/: [seminar]creating_module.ipynb
11-homework/: hw_dense_and_convolutional_nn.ipynb
12-batchNorm-dropout/: [seminar]pytorch_bn_dropout.ipynb
14-homework/: simpsons_classification.ipynb
15-homework/: semantic_segmentation.ipynb
17-vae/: generative_models_timeseries.ipynb  vae.ipynb
18-homework-vae/: autoencoders.ipynb
20-homework-gan/: [hw]gan.ipynb
3-basic-ml/: [seminar]ml_basics.ipynb
4-homework/: [homework]knn.ipynb
5-linear-model/: [seminar,adv]linreg_regularization.ipynb
6-homework/: [homework]linear_models_fall_2021.ipynb
8-homework/: hw_kaggle.ipynb
