[tool.poetry]
name = "dl_course_2023"
version = "0.1.0"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.16.0"
exif = "^1.6.0"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.1"
sympy = "^1.12"
catboost = "^1.2.2"
ipywidgets = "^8.1.1"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp39-cp39-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp39-cp39-linux_x86_64.whl"}
seaborn = "^0.13.0"
tqdm = "^4.66.1"
scikit-image = "^0.22.0"


[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
wemake-python-styleguide = "^0.15.2"

[tool.poetry.scripts]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
